--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -61,18 +61,18 @@ am_libdirectunitactions_la_OBJECTS = inflictdamage.lo \
 	transfercontrolcommand.lo buildproductionlinecommand.lo \
 	removeproductionlinecommand.lo cancelresearchcommand.lo \
 	setresourceprocessingratecommand.lo servicing.lo spawnmine.lo \
-	putobjectcommand.lo putminecommand.lo containeraction.lo \
-	recycleunitcommand.lo consumeresource.lo vehicleattack.lo \
-	moveunit.lo discoverresources.lo unitcommand.lo \
-	attackcommand.lo moveunitcommand.lo convertcontainer.lo \
-	containercommand.lo constructunitcommand.lo spawnunit.lo \
-	cargomovecommand.lo
+	putobjectcommand.lo putminecommand.lo trainunitcommand.lo \
+	servicecommand.lo containeraction.lo recycleunitcommand.lo \
+	consumeresource.lo vehicleattack.lo moveunit.lo \
+	discoverresources.lo unitcommand.lo attackcommand.lo \
+	moveunitcommand.lo convertcontainer.lo containercommand.lo \
+	constructunitcommand.lo spawnunit.lo cargomovecommand.lo
 libdirectunitactions_la_OBJECTS =  \
 	$(am_libdirectunitactions_la_OBJECTS)
 libmapactions_la_DEPENDENCIES =
 am_libmapactions_la_OBJECTS = spawnobject.lo spawnmine.lo \
 	changeview.lo removemine.lo removeobject.lo \
-	changeobjectproperty.lo trainunitcommand.lo servicecommand.lo
+	changeobjectproperty.lo
 libmapactions_la_OBJECTS = $(am_libmapactions_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -270,7 +270,7 @@ libdirectunitactions_la_SOURCES = inflictdamage.cpp destructcontainer.cpp constr
                           recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp jumpdrivecommand.cpp \
                           powergenerationswitchcommand.cpp repairbuildingcommand.cpp transfercontrolcommand.cpp \
                           buildproductionlinecommand.cpp removeproductionlinecommand.cpp cancelresearchcommand.cpp setresourceprocessingratecommand.cpp \
-                          servicing.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp \
+                          servicing.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp trainunitcommand.cpp servicecommand.cpp \
                           containeraction.cpp recycleunitcommand.cpp consumeresource.cpp vehicleattack.cpp moveunit.cpp discoverresources.cpp \
                           unitcommand.cpp attackcommand.cpp moveunitcommand.cpp convertcontainer.cpp containercommand.cpp \
                           constructunitcommand.cpp spawnunit.cpp cargomovecommand.cpp 
@@ -278,9 +278,7 @@ libdirectunitactions_la_SOURCES = inflictdamage.cpp destructcontainer.cpp constr
 libdirectunitactions_la_LIBADD = @SDL_LIBS@
 
 # this are actions that are also needed by mapeditor
-libmapactions_la_SOURCES = spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp \
-                                  trainunitcommand.cpp servicecommand.cpp
-
+libmapactions_la_SOURCES = spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp 
 libmapactions_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
 all: all-am
