Added diplomacy to undo commands

--- a/config.h.in
+++ b/config.h.in
@@ -34,6 +34,12 @@
 /* Define to 1 if you have the `jpeg' library (-ljpeg). */
 #undef HAVE_LIBJPEG
 
+/* Define to 1 if you have the `lua50' library (-llua50). */
+#undef HAVE_LIBLUA50
+
+/* Define to 1 if you have the `luabind' library (-lluabind). */
+#undef HAVE_LIBLUABIND
+
 /* Define to 1 if you have the `physfs' library (-lphysfs). */
 #undef HAVE_LIBPHYSFS
 
