--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.3.72.100)
+AC_INIT(asc, )
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -188,13 +188,13 @@ AC_CHECK_LIB( SDL_image,
 #AC_MSG_RESULT("yes")
 
 
-AC_CHECK_LIB(lua50, 
-             lua_open,
-             LUAAVAIL=11 )
-             
-#             AC_LIB_MISSING( "Lua 5.0", http://www.lua.org/))
+LUAAVAIL=1
 
-if test "x$LUAAVAIL" = x1; then
+AC_CHECK_LIB(lua50,lua_open,,LUAAVAIL=0)
+AC_CHECK_LIB(luabind,luabind::open,,LUAAVAIL=0)
+
+
+if test "x$LUAAVAIL" = x111; then
 
    LUA_FLAGS="-I/usr/include/lua50/"
    AC_SUBST(LUA_FLAGS)
